# python-redsys

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-app.yml
redsys/: __init__.py  client.py  cof.py  constants.py  currencies.py  languages.py  request.py  response.py  transactions.py
redsys/constants/: languages.py
redsys/tests/: test_client.py  test_request.py  test_response.py
