[tool.poetry]
name = "python-redsys"
version = "1.0.2"
description = "A simple, clean and less dependant client to handle payments through Redsys."
authors = ["Andrés Reverón Molina <andres@reveronmolina.me>", "David Díaz <d.diazp@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/systemallica/python-redsys"
classifiers = [
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
]
packages = [
    { include = "redsys" }
]

[tool.poetry.dependencies]
python = "^3.7"
pycryptodome = "^3.9.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pytest = "^6.2.1"
flake8 = "^3.8.4"
pre-commit = "^2.9.3"
pytest-cov = "^2.10.1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
