[tool.poetry]
name = "python-redsys"
version = "1.0.3"
description = "A simple, clean and less dependant client to handle payments through Redsys."
authors = ["Andrés Reverón Molina <andres@reveronmolina.me>", "David Díaz <d.diazp@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/systemallica/python-redsys"
classifiers = [
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
]
packages = [
    { include = "redsys" }
]

[tool.poetry.dependencies]
python = "^3.7"
pycryptodome = "^3.11.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
pytest = "^6.2.5"
flake8 = "^4.0.1"
pre-commit = "^2.15.0"
pytest-cov = "^3.0.0"
mypy = "^0.910"
python-semantic-release = "^7.19.2"
pyupgrade = "^2.29.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[tool.semantic_release]
version_variable = [
  "redsys/__init__.py:__version__",
]
version_toml = ["pyproject.toml:tool.poetry.version"]
upload_to_pypi = true
upload_to_release = true
build_command = "poetry build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
